files missing in previous commit

--- a/tex/objects.tex
+++ b/tex/objects.tex
@@ -123,7 +123,7 @@ A {\it loose} selection, where isolation and track-cluster matching
 requirements are relaxed, is also used, with the purpose of studying
 and modeling the contamination among the tight candidates. 
 The procedure to estimate this background
-contribution is detailed in Section~\ref{sec:bckg}[QCD background].
+contribution is detailed in Section~\ref{sec:qcdbckg}[QCD background].
 In order to ensure high purity, the $\et$ of the electron is required
 to be larger than \mbox{$25 \GeV{}$}, and electrons in the transition
 region $1.37<|\eta_{\mathrm{cluster}}|<1.52$ are not considered.
