compile only simulation

--- a/main.tex
+++ b/main.tex
@@ -6,7 +6,7 @@
 
 \input{tex/preamble}
 
-\includeonly{tex/objects}
+\includeonly{tex/simulation}
 
 \addbibresource{bib/experiment.bib}
 \addbibresource{bib/objects.bib}
