split reconstruction and selection chapter and initial import for simulation

--- a/tex/selection.tex
+++ b/tex/selection.tex
@@ -1,9 +1,7 @@
-\chapter{Selection and Reconstruction}
+\chapter{Event Selection}
 \label{sec:selection}
 
 \section{Event Selection}
 
 \section{QCD background}
 \label{sec:qcdbckg}
-
-\section{Kinematic Reconstruction}
