--- a/main.tex
+++ b/main.tex
@@ -1,5 +1,5 @@
 % adding pointlessnumbers to avoid "Figure 1.1.: ..."
-\documentclass[11pt, a4paper, headsepline, footsepline, numbers=noenddot]{book}
+\documentclass[11pt, a4paper]{book}
 %\documentclass[11pt, a4paper, headsepline, footsepline, numbers=noenddot, draft]{book}
 
 \pdfoutput=1
@@ -9,6 +9,7 @@
 \includeonly{tex/simulation}
 
 \addbibresource{bib/experiment.bib}
+\addbibresource{bib/simulation.bib}
 \addbibresource{bib/objects.bib}
  
 \begin{document} 
