fix accent in Brüning

--- a/bib/experiment.bib
+++ b/bib/experiment.bib
@@ -1,5 +1,5 @@
 @book{LHCreport,
-      author        = "Brüning, Oliver Sim and Collier, Paul and Lebrun, P and
+      author        = "Br{\"u}ning, Oliver Sim and Collier, Paul and Lebrun, P and
                        Myers, Stephen and Ostojic, Ranko and Poole, John and
                        Proudlock, Paul",
       title         = "{LHC Design Report}",
